kubernetes/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: humangov-service

spec:

  selector:
    app: humangov

  ports:

  - port: 80
    targetPort: 5000

  type: ClusterIP
